--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <app-navbar></app-navbar>
-  <app-produit></app-produit>
-
-<router-outlet></router-outlet>
+  <app-main-nav>
+      <app-produit-list></app-produit-list>
+ </app-main-nav>
 </body>
 </html>
