--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -1,3 +1,4 @@
+<!--Fatima Zahra BENHIRT-->
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport="false"
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
@@ -20,7 +21,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>SmartVentes</span>
+      <span></span>
       <span class="spacer"></span>
       <mat-icon aria-label="Side nav toggle icon">more_vert</mat-icon>
       <mat-icon aria-label="Side nav toggle icon">notifications</mat-icon>
