--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <app-main-nav>
-      <app-produit-list></app-produit-list>
+             <app-fournisseur-list></app-fournisseur-list>
+     <!--<app-fournisseur></app-fournisseur>-->
  </app-main-nav>
 </body>
 </html>
