--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <app-main-nav>
-             <app-fournisseur-list></app-fournisseur-list>
+             <app-client-list></app-client-list>
      <!--<app-fournisseur></app-fournisseur>-->
  </app-main-nav>
 </body>
