--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <app-main-nav>
-             <app-client-list></app-client-list>
-     <!--<app-fournisseur></app-fournisseur>-->
+          <!--   <app-client-list></app-client-list>
+     <app-fournisseur></app-fournisseur>-->
  </app-main-nav>
+ <router-outlet></router-outlet>
 </body>
 </html>
