--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -4,12 +4,14 @@
 }
 
 .sidenav {
-  width: 300px;
+  width: 250px;
   height: 100%;
+  background-color: #343232;
 }
 
-
-
+.mat-list-base .mat-list-item {
+  color: #FFAA56
+}
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
@@ -24,7 +26,7 @@ mat-toolbar a{
   display: inline-block;
   margin: 0 40px;
   color: black;
-  text-decoration: none;
+  
 }
 mat-icon{
   display: inline-block;
@@ -37,6 +39,7 @@ mat-icon{
   .sidenav{
     display: none;
     background-color: #343232;
+    
   }
 }
   
